[project]

package-mode = false
name = "epistemo"
version = "0.1.0"
description = "A RAG system with an experimental document embedder app and reusable components."

authors = [
    {name = "Vojin Radosavljevic",email = "vojinr@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"

packages = [
    { include = "embedder", from = "src" },
    { include = "epistemo", from = "src"},
]
[tool.poetry.dependencies]
sentence-transformers = "^4.0.2"
python-dotenv = "^1.1.0"


#chromadb = "^1.0.0"
#"chromadb >= 1.0.0",
#"sentence-transformers >= 4.0.2",
#"python-dotenv >= 1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


